// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiToast Props color danger is rendered 1`] = `
<EuiToast
  color="danger"
  title="test title"
>
  <div
    className="euiToast euiToast--danger"
  >
    <EuiScreenReaderOnly>
      <p
        className="euiScreenReaderOnly"
      >
        <EuiI18n
          default="A new notification appears"
          token="euiToast.newNotification"
        >
          A new notification appears
        </EuiI18n>
      </p>
    </EuiScreenReaderOnly>
    <EuiI18n
      default="Notification"
      token="euiToast.notification"
    >
      <div
        aria-label="Notification"
        className="euiToastHeader"
        data-test-subj="euiToastHeader"
      >
        <span
          className="euiToastHeader__title"
        >
          test title
        </span>
      </div>
    </EuiI18n>
  </div>
</EuiToast>
`;

exports[`EuiToast Props color primary is rendered 1`] = `
<EuiToast
  color="primary"
  title="test title"
>
  <div
    className="euiToast euiToast--primary"
  >
    <EuiScreenReaderOnly>
      <p
        className="euiScreenReaderOnly"
      >
        <EuiI18n
          default="A new notification appears"
          token="euiToast.newNotification"
        >
          A new notification appears
        </EuiI18n>
      </p>
    </EuiScreenReaderOnly>
    <EuiI18n
      default="Notification"
      token="euiToast.notification"
    >
      <div
        aria-label="Notification"
        className="euiToastHeader"
        data-test-subj="euiToastHeader"
      >
        <span
          className="euiToastHeader__title"
        >
          test title
        </span>
      </div>
    </EuiI18n>
  </div>
</EuiToast>
`;

exports[`EuiToast Props color success is rendered 1`] = `
<EuiToast
  color="success"
  title="test title"
>
  <div
    className="euiToast euiToast--success"
  >
    <EuiScreenReaderOnly>
      <p
        className="euiScreenReaderOnly"
      >
        <EuiI18n
          default="A new notification appears"
          token="euiToast.newNotification"
        >
          A new notification appears
        </EuiI18n>
      </p>
    </EuiScreenReaderOnly>
    <EuiI18n
      default="Notification"
      token="euiToast.notification"
    >
      <div
        aria-label="Notification"
        className="euiToastHeader"
        data-test-subj="euiToastHeader"
      >
        <span
          className="euiToastHeader__title"
        >
          test title
        </span>
      </div>
    </EuiI18n>
  </div>
</EuiToast>
`;

exports[`EuiToast Props color warning is rendered 1`] = `
<EuiToast
  color="warning"
  title="test title"
>
  <div
    className="euiToast euiToast--warning"
  >
    <EuiScreenReaderOnly>
      <p
        className="euiScreenReaderOnly"
      >
        <EuiI18n
          default="A new notification appears"
          token="euiToast.newNotification"
        >
          A new notification appears
        </EuiI18n>
      </p>
    </EuiScreenReaderOnly>
    <EuiI18n
      default="Notification"
      token="euiToast.notification"
    >
      <div
        aria-label="Notification"
        className="euiToastHeader"
        data-test-subj="euiToastHeader"
      >
        <span
          className="euiToastHeader__title"
        >
          test title
        </span>
      </div>
    </EuiI18n>
  </div>
</EuiToast>
`;

exports[`EuiToast Props iconType is rendered 1`] = `
<EuiToast
  iconType="user"
  title="test title"
>
  <div
    className="euiToast"
  >
    <EuiScreenReaderOnly>
      <p
        className="euiScreenReaderOnly"
      >
        <EuiI18n
          default="A new notification appears"
          token="euiToast.newNotification"
        >
          A new notification appears
        </EuiI18n>
      </p>
    </EuiScreenReaderOnly>
    <EuiI18n
      default="Notification"
      token="euiToast.notification"
    >
      <div
        aria-label="Notification"
        className="euiToastHeader"
        data-test-subj="euiToastHeader"
      >
        <EuiIcon
          aria-hidden="true"
          className="euiToastHeader__icon"
          size="m"
          type="user"
        >
          <EuiIconEmpty
            aria-hidden="true"
            className="euiIcon euiIcon--medium euiIcon-isLoading euiToastHeader__icon"
            focusable="false"
            style={null}
          >
            <svg
              aria-hidden="true"
              className="euiIcon euiIcon--medium euiIcon-isLoading euiToastHeader__icon"
              focusable="false"
              height={16}
              style={null}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            />
          </EuiIconEmpty>
        </EuiIcon>
        <span
          className="euiToastHeader__title"
        >
          test title
        </span>
      </div>
    </EuiI18n>
  </div>
</EuiToast>
`;

exports[`EuiToast Props title is rendered 1`] = `
<EuiToast
  title="toast title"
>
  <div
    className="euiToast"
  >
    <EuiScreenReaderOnly>
      <p
        className="euiScreenReaderOnly"
      >
        <EuiI18n
          default="A new notification appears"
          token="euiToast.newNotification"
        >
          A new notification appears
        </EuiI18n>
      </p>
    </EuiScreenReaderOnly>
    <EuiI18n
      default="Notification"
      token="euiToast.notification"
    >
      <div
        aria-label="Notification"
        className="euiToastHeader"
        data-test-subj="euiToastHeader"
      >
        <span
          className="euiToastHeader__title"
        >
          toast title
        </span>
      </div>
    </EuiI18n>
  </div>
</EuiToast>
`;

exports[`EuiToast is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiToast testClass1 testClass2"
  data-test-subj="test subject string"
>
  <p
    class="euiScreenReaderOnly"
  >
    A new notification appears
  </p>
  <div
    aria-label="Notification"
    class="euiToastHeader euiToastHeader--withBody"
    data-test-subj="euiToastHeader"
  >
    <span
      class="euiToastHeader__title"
    >
      test title
    </span>
  </div>
  <div
    class="euiText euiText--small euiToastBody"
  >
    <p>
      Hi
    </p>
  </div>
</div>
`;
